--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,421 +1,356 @@
-nav{
+nav {
+  width: 100%;
+  height: 85px;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color),
+    0 2px 4px -2px var(--tw-shadow-color);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  position: fixed;
+  top: 0;
+  z-index: 5;
+  overflow: hidden;
+
+  .container {
+    width: 1300px;
+    height: 80px;
+    margin: 10px auto;
+    padding: 8px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // overflow: hidden;
+
+    .nav-logo {
+      width: 150px;
+
+      img {
+        width: 100px;
+      }
+    }
+    .nav-img {
+      width: 600px;
+      // overflow: hidden;
+      position: absolute;
+      right: 30%;
+      // display: none;
+      z-index: 1;
+
+      img {
+        width: 100%;
+        height: 90px;
+        opacity: 0.35;
+        // top: 10px;
+      }
+    }
+    .nav-concet {
+      width: auto;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      // position: absolute;
+
+      ul {
+        display: flex;
+        gap: 18px;
+        position: relative;
+        z-index: 2;
+        text-transform: uppercase;
+        // align-items: center;
+
+        a {
+          color: black;
+          font-weight: 700;
+          font-size: 16px;
+          font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji,
+            Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+          // font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+          font-size: 16px;
+          padding: 10px 0;
+          border-bottom: 2px solid transparent; /* Boshlang‘ich chiziq ko‘rinmaydi */
+          transition: all 0.3s ease;
+
+          &:hover {
+            color: red; /* Matn rangi qizilga o‘zgaradi */
+            border-bottom: 2px solid red;
+          }
+        }
+      }
+
+      select {
+        background: black;
+        color: white;
+        outline: none;
+        padding: 5px;
+      }
+    }
+    .select-bars {
+      display: none;
+      align-items: center;
+      gap: 15px;
+      z-index: 3;
+      // position: absolute;
+
+      p {
+        color: black;
+        font-weight: 700;
+        font-size: 18px;
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      }
+
+      .bars {
+        color: red;
+        font-size: 40px;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .Open {
     width: 100%;
-    height: 85px;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-    --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, .1), 0 2px 4px -2px rgba(0, 0, 0, .1);
-    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+    height: 100%;
+    transition: all 0.2s linear;
     position: fixed;
-    top: 0;
-    z-index: 5;
-    overflow: hidden;
-    
-    .container{
-        width: 1300px;
-        height: 80px;
-        margin: 10px  auto;
-        padding: 8px 15px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        // overflow: hidden;
+    // display: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    top: -140%;
+    z-index: 4;
+    background-color: white;
+    text-align: center;
 
-        .nav-logo{
-            width: 150px;
-
-            img{
-                width: 100px;
-            }
-
-        }
-        .nav-img{
-            width: 600px;
-            // overflow: hidden;
-            position: absolute;
-            right: 30%;
-            // display: none;
-            z-index: 1;
-
-            img{
-                width: 100%;
-                height: 90px;
-                opacity: .35;
-                // top: 10px;
-            }
-
-        }
-        .nav-concet{
-            width: auto;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            gap: 30px;
-            // position: absolute;
-
-            ul{
-                display: flex;
-                gap: 18px;
-                position: relative;
-                z-index: 2;
-                text-transform: uppercase;
-                // align-items: center;
-
-                a{
-                    color: black;
-                    font-weight: 700;
-                    font-size: 16px;
-                    font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-                    // font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-                    font-size: 16px;
-  padding: 10px 0;
-  display: inline-block;
-  border-bottom: 2px solid transparent; /* Boshlang‘ich chiziq ko‘rinmaydi */
-  transition: all 0.3s ease;
-                    &:hover{
-                        color: red; /* Matn rangi qizilga o‘zgaradi */
-                        border-bottom: 2px solid red;
-                    }
-                }
-            }
-
-            select{
-                background: black;
-                color: white;
-                outline: none;
-                padding: 5px;
-            }
-
-          
-
-        }
-        .select-bars{
-            display: none;
-            align-items: center;
-            gap: 15px;
-            z-index: 3;
-            // position: absolute;
-
-            p{
-                color: black;
-                font-weight: 700;
-                font-size: 18px;
-                font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-
-            }
-
-            .bars{
-                color: red;
-                font-size: 40px;
-                cursor: pointer;
-
-            }
-        }
-
+    .edit {
+      width: 40px;
+      height: 40px;
+      // background-color: red;
+      color: red;
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      font-weight: 700;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 35px;
     }
 
-    .Open{
-        width: 100%;
-        height: 100%;
-        transition: all .2s linear;
-        position: fixed;
-        // display: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        top: -140%;
-        z-index: 4;
-        background-color: white;
-        text-align: center;
+    ul {
+      width: 100%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      // margin-top: 40%;
+      // line-height: 50px;
+      // text-align: center;
+      gap: 20px;
 
-        .edit{
-            width: 40px;
-            height: 40px;
-            // background-color: red;
-            color: red;
-            font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-            font-weight: 700;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 35px;
-        }
-
-        ul{
-            width: 100%;
-            height: auto;
-            display: flex;
-            flex-direction: column;
-            // margin-top: 40%;
-            // line-height: 50px;
-            // text-align: center;
-            gap: 20px;
-
-            a{
-                color: black;
-                font-weight: 700;
-                font-size: 25px;
-                font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-                // font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-            }
-        }
-
-
-
-        &.activ{
-            top: 0;
-            // display: flex;
-            // width: ;
-        }
+      a {
+        color: black;
+        font-weight: 700;
+        font-size: 25px;
+        font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji,
+          Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+        // font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      }
     }
 
+    &.activ {
+      top: 0;
+      // display: flex;
+      // width: ;
+    }
+  }
 }
-@media screen and (max-width: 447px){
-    nav{
-        width: 100%;
-        height: auto;
-        overflow: hidden;
-        // margin: 0 auto; 
-        .container{
-            width: 100%;
-            height: auto;
-            display: flex;
-            margin: 0 auto;
-            justify-content: space-around;
-            overflow: hidden;
+@media screen and (max-width: 447px) {
+  nav {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    // margin: 0 auto;
+    .container {
+      width: 100%;
+      height: auto;
+      display: flex;
+      margin: 0 auto;
+      justify-content: space-around;
+      overflow: hidden;
 
-            
-
-            .nav-logo{
-                width: auto;
-                img{
-                    width: 80px;
-                }
-           
-            }
-            .nav-img{
-                width: 100%;
-                right: 0;
-                
-                img{
-
-                    width: 100%;
-                    // left: 30%;
-                    // margin: 0 auto;
-                }
-            }
-            .nav-concet{
-                width: 100px;
-
-                ul{
-                    display: none;
-
-                }
-
-                select{
-                    // width: 50px;
-                    display: none;
-                }
-
-             
-
-            }
-            .select-bars{
-                display: flex;
-           
-
-
-            }
-            
-   
-
+      .nav-logo {
+        width: auto;
+        img {
+          width: 80px;
         }
-       
+      }
+      .nav-img {
+        width: 100%;
+        right: 0;
+
+        img {
+          width: 100%;
+          // left: 30%;
+          // margin: 0 auto;
+        }
+      }
+      .nav-concet {
+        width: 100px;
+
+        ul {
+          display: none;
+        }
+
+        select {
+          // width: 50px;
+          display: none;
+        }
+      }
+      .select-bars {
+        display: flex;
+      }
     }
-    
+  }
 }
 @media screen and (min-width: 447px) and (max-width: 769px) {
-    nav{
-        width: 100%;
-        height: auto;
-        // margin: 0 auto; 
-        .container{
-            width: 100%;
-            height: auto;
-            display: flex;
-            margin: 0 auto;
-            justify-content: space-between;
+  nav {
+    width: 100%;
+    height: auto;
+    // margin: 0 auto;
+    .container {
+      width: 100%;
+      height: auto;
+      display: flex;
+      margin: 0 auto;
+      justify-content: space-between;
 
-            
-
-            .nav-logo{
-                width: auto;
-                img{
-                    width: 90px;
-                }
-           
-            }
-            .nav-img{
-                width: 100%;
-                right: 0;
-                
-                img{
-
-                    width: 100%;
-                    // left: 30%;
-                    // margin: 0 auto;
-                }
-            }
-            .nav-concet{
-                width: 100px;
-
-                ul{
-                    display: none;
-
-                }
-
-                select{
-                    // width: 50px;
-                    display: none;
-                }
-
-             
-
-            }
-            .select-bars{
-                display: flex;
-           
-
-
-            }
-            
-   
-
+      .nav-logo {
+        width: auto;
+        img {
+          width: 90px;
         }
-    }  
+      }
+      .nav-img {
+        width: 100%;
+        right: 0;
+
+        img {
+          width: 100%;
+          // left: 30%;
+          // margin: 0 auto;
+        }
+      }
+      .nav-concet {
+        width: 100px;
+
+        ul {
+          display: none;
+        }
+
+        select {
+          // width: 50px;
+          display: none;
+        }
+      }
+      .select-bars {
+        display: flex;
+      }
+    }
+  }
 }
 @media screen and (min-width: 769px) and (max-width: 990px) {
-     nav{
-        width: 100%;
-        height: auto;
-        // margin: 0 auto; 
-        .container{
-            width: 100%;
-            height: auto;
-            display: flex;
-            margin: 0 auto;
-            justify-content: space-between;
+  nav {
+    width: 100%;
+    height: auto;
+    // margin: 0 auto;
+    .container {
+      width: 100%;
+      height: auto;
+      display: flex;
+      margin: 0 auto;
+      justify-content: space-between;
 
-            
-
-            .nav-logo{
-                width: auto;
-                img{
-                    width: 110px;
-                }
-           
-            }
-            .nav-img{
-                width: 100%;
-                right: 0;
-                
-                img{
-
-                    width: 100%;
-                    // left: 30%;
-                    // margin: 0 auto;
-                }
-            }
-            .nav-concet{
-                width: 100px;
-
-                ul{
-                    display: none;
-
-                }
-
-                select{
-                    // width: 50px;
-                    display: none;
-                }
-
-             
-
-            }
-            .select-bars{
-                display: flex;
-           
-
-
-            }
-            
-   
-
+      .nav-logo {
+        width: auto;
+        img {
+          width: 110px;
         }
-    }  
+      }
+      .nav-img {
+        width: 100%;
+        right: 0;
+
+        img {
+          width: 100%;
+          // left: 30%;
+          // margin: 0 auto;
+        }
+      }
+      .nav-concet {
+        width: 100px;
+
+        ul {
+          display: none;
+        }
+
+        select {
+          // width: 50px;
+          display: none;
+        }
+      }
+      .select-bars {
+        display: flex;
+      }
+    }
+  }
 }
 @media screen and (min-width: 990px) and (max-width: 1300px) {
-    nav{
-        width: 100%;
-        height: auto;
-        // margin: 0 auto; 
-        .container{
-            width: 100%;
-            height: auto;
-            display: flex;
-            margin: 0 auto;
-            // justify-content: space-between;
+  nav {
+    width: 100%;
+    height: auto;
+    // margin: 0 auto;
+    .container {
+      width: 100%;
+      height: auto;
+      display: flex;
+      margin: 0 auto;
+      // justify-content: space-between;
 
-            
-
-            .nav-logo{
-                width: auto;
-                img{
-                    width: 110px;
-                }
-           
-            }
-            .nav-img{
-                width: 100%;
-                right: 0;
-                
-                img{
-
-                    width: 100%;
-                    // left: 30%;
-                    // margin: 0 auto;
-                }
-            }
-            .nav-concet{
-                width: auto;
-
-                ul{
-                    display: flex;
-
-                }
-
-                select{
-                    // width: 50px;
-                    display: flex;
-                }
-
-             
-
-            }
-            .select-bars{
-                display: none;
-           
-
-
-            }
-            
-   
-
+      .nav-logo {
+        width: auto;
+        img {
+          width: 110px;
         }
-    }   
-}
+      }
+      .nav-img {
+        width: 100%;
+        right: 0;
 
+        img {
+          width: 100%;
+          // left: 30%;
+          // margin: 0 auto;
+        }
+      }
+      .nav-concet {
+        width: auto;
+
+        ul {
+          display: flex;
+        }
+
+        select {
+          // width: 50px;
+          display: flex;
+        }
+      }
+      .select-bars {
+        display: none;
+      }
+    }
+  }
+}
