--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -170,7 +170,7 @@ nav {
 }
 @media screen and (max-width: 447px) {
   nav {
-    width: 100%;
+    width: auto;
     height: auto;
     overflow: hidden;
 
