--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,4 +1,4 @@
-nav {
+.navbar {
   width: 100%;
   height: 85px;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
@@ -13,6 +13,16 @@ nav {
   top: 0;
   z-index: 5;
   overflow: hidden;
+  transition: all 0.2s linear;
+
+  
+
+  &.hidden{
+    transform: translateY(-100%);
+  transition: all .2s linear;
+
+
+}
 
   .container {
     width: 1300px;
@@ -113,14 +123,13 @@ nav {
   .Open {
     width: 100%;
     height: 100%;
-    transition: all 0.2s linear;
     position: fixed;
     // display: none;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    top: -140%;
+    top: -240%;
     z-index: 4;
     background-color: white;
     text-align: center;
@@ -169,7 +178,7 @@ nav {
   }
 }
 @media screen and (max-width: 447px) {
-  nav {
+  .navbar{
     width: 100%;
     height: auto;
     top: 0;
@@ -264,7 +273,7 @@ nav {
   // }
 }
 @media screen and (min-width: 447px) and (max-width: 769px) {
-  nav {
+  .navbar{
     width: 100%;
     height: auto;
     // margin: 0 auto;
@@ -311,7 +320,7 @@ nav {
   }
 }
 @media screen and (min-width: 769px) and (max-width: 990px) {
-  nav {
+  .navbar{
     width: 100%;
     height: auto;
     // margin: 0 auto;
@@ -357,7 +366,7 @@ nav {
   }
 }
 @media screen and (min-width: 990px) and (max-width: 1300px) {
-  nav {
+  .navbar{
     width: 100%;
     height: auto;
     // margin: 0 auto;
