--- a/src/components/MainPlags/Plags.scss
+++ b/src/components/MainPlags/Plags.scss
@@ -18,14 +18,17 @@
         width: 1300px;
         height: 100px;
         margin: 0 auto;
-      padding: 0 90px;
+      padding: 0;
+      text-align: center;
 
 
         h1{
             font-size: 45px;
             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
             color: white;
+            margin: 0 auto;
             margin: 40px 0 20px 0;
+            text-align: center;
         }
         hr{
             width: 50px;
