--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -133,6 +133,7 @@
     z-index: 4;
     background-color: white;
     text-align: center;
+    transition: all .4 linear;
 
     .edit {
       width: 40px;
